sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:21: error: unclosed comment
	/*Faire
        ^AlgCocktailSort1:2: error: Missing closing brace `}' assumed here
def cocktailSort() {
^AlgCocktailSort1:9: error: Missing closing brace `}' assumed here
				echange(i+1,i)
                                ^